--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@vueuse/core": "^8.6.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.4",
     "vue": "^3.2.25",
