--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^8.6.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.4",
+    "rxjs": "^7.5.5",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
